--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@
 .image, 
 #section1, 
 #section2, 
+.card-title,
 .cards, 
-.card-mini {
+.card-mini, 
+.subtext {
     display: flex;
 }
 
@@ -54,38 +56,104 @@
     color: #E5E7EB;
 }
 
-.nav ul li {
-    padding: 10px;
+.nav-links ul li {
+    padding: 15px;
 }
 
 .nav-links {
     flex: 2;
+    display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .intro {
     flex-direction: column;
+    flex: 1;
+}
+
+.intro h1 {
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.intro p {
+    color: #E5E7EB;
+    font-size: 18px;
+    margin-top: 10px;
+}
+
+.intro button {
+    background-color: #3882F6;
+    color: #E5E7EB;
+    font-size: 18px;
+    width: 120px;
+    border: 0;
+    border-radius: 5px;
+    padding: 5px;
+    margin-top: 10px;
 }
 
 .image {
-    background-color: #1F2937;
+    background-color: #6c7a8d;
     color: #E5E7EB;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
 }
 
 #section1 {
     justify-content: space-around;
     background-color: #1F2937;
+    padding: 120px 175px;
+    gap: 30px;
 }
 
 #section2 {
     flex-direction: column;
 }
 
+#section2 h2 {
+    font-size: 36px;
+}
+
+.card-title {
+    justify-content: center;
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 800;
+    padding: 36px;
+}
+
 .cards {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 45px;
+    color: #1F2937;
+    font-size: 18px;
+    margin-bottom: 100px;
 }
 .card-mini {
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    width: 170px;
+}
+
+.box {
+    width: 170px;
+    height: 170px;
+    border: 3px solid #3882F6;
+    border-radius: 15px;
+    box-sizing: border-box;
+}
+
+.subtext {
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.subtext p {
+    text-align: center;
 }
