--- a/style.css
+++ b/style.css
@@ -157,3 +157,34 @@
 .subtext p {
     text-align: center;
 }
+
+#section3 {
+    background-color: #E5E7EB;
+    color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 150px;
+}
+
+.quote {
+    width: 700px;
+
+}
+
+.quote p {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+}
+
+.quote-source {
+    margin-left: 500px;
+}
+
+.quote-source p {
+    text-align: right;
+    font-weight: 700;
+    padding-top: 10px;
+}
